--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "axios": "^0.27.2",
     "firebase": "^9.10.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "thunk": "^0.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
