--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "thunk": "^0.0.1"
